All_Component_DX/force-app/main/default/objects/Installed_Product__c/Installed_Product__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Installed Product represents one or a collection of product units delivered to a customer and installed at the customer’s location(s). Depending upon the tracking needs of an organization, installed products are tracked using a serial number, a lot/batch number or simply by the product number. In ServiceMax, Installed Product record drives entitlement, material movement and service delivery activities.</description>
    <label>Installed Product</label>
    <nameField>
        <label>Installed Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>