All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Access_Hours__c.field-meta.xml
<CustomField>
    <fullName>Access_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Time period during which this installed product can be accessed for service. Reference to an existing Business Hours record in Salesforce</description>
    <label>Access Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>