All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Alternate_Company__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Company__c</fullName>
    <description>Free text to indicate if another account is involved with this product but is not an existing customer record</description>
    <inlineHelpText>Free text to indicate if another company is involved with this product but is not an existing customer record</inlineHelpText>
    <label>Alternate Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>