All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag__c</fullName>
    <description>Another way to identify the installed product. Typically asset tags are assigned by your customers. This will be a timesaver when your customer calls for support and identifies  the product by their asset tag instead of trying to locate your serial number on the product</description>
    <inlineHelpText>Another way to identify the installed product. Asset tags are normally assigned by your customers. When your customer calls for support, they can identify the product by their asset tag instead of trying to locate your serial number on the product.</inlineHelpText>
    <label>Asset Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>