All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Do Not Use)</description>
    <inlineHelpText>(Do Not Use)</inlineHelpText>
    <label>Business Hours (Do Not Use)</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>