All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</description>
    <inlineHelpText>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N70000001hzcJEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>