All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Date_Installed__c.field-meta.xml
<CustomField>
    <fullName>Date_Installed__c</fullName>
    <description>Date on which the product was installed at the customer location</description>
    <inlineHelpText>Date on which the product was installed at the customer location</inlineHelpText>
    <label>Date Installed</label>
    <type>Date</type>
</CustomField>