All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <description>Date on which this product was ordered by the customer</description>
    <inlineHelpText>Date on which this product was ordered by the customer</inlineHelpText>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>