All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped__c</fullName>
    <description>Date on which this product was shipped to the customer originally</description>
    <inlineHelpText>Date on which this product was shipped to the customer originally</inlineHelpText>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>