All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Distributor_Company__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the distributor account if applicable</description>
    <inlineHelpText>Name of the distributor company if applicable</inlineHelpText>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N70000001hzcLEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>