All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>East west geographic coordinate measurement.</description>
    <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>