All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipName>Installed_Product</relationshipName>
    <type>Lookup</type>
</CustomField>