All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of the product associated with the Installed Product</description>
    <formula>Product__r.Name</formula>
    <inlineHelpText>Name of the product associated with the Installed Product</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>