All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/ProductIQTemplate__c.field-meta.xml
<CustomField>
    <fullName>ProductIQTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductIQ Template</label>
    <referenceTo>ProductIQTemplate__c</referenceTo>
    <relationshipName>Installed_Products_del</relationshipName>
    <type>Lookup</type>
</CustomField>