All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>Sales order reference (typically from the ERP application)</description>
    <inlineHelpText>Sales order reference (typically from the ERP application)</inlineHelpText>
    <label>Sales Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>