All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Serial_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Lot_Number__c</fullName>
    <description>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</description>
    <inlineHelpText>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</inlineHelpText>
    <label>Serial/Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>