All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Service_Contract_Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Exchange_Type__c</fullName>
    <description>This field is used by Reverse Logistics Module. Exchange type from the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
    <label>Service Contract Exchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>