All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Service_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used by Reverse Logistics Module. Reference to the latest service contract line for this installed product. Derived automatically upon creating/updating service contract</description>
    <label>Service Contract Line</label>
    <referenceTo>Service_Contract_Products__c</referenceTo>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>