All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/SM_External_Parent__c.field-meta.xml
<CustomField>
    <fullName>SM_External_Parent__c</fullName>
    <description>External system unique ID to the parent installed product in the installed product hierarchy.</description>
    <inlineHelpText>External system unique ID to the parent installed product in the installed product hierarchy.</inlineHelpText>
    <label>Parent (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>