All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/SM_External_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_External_Product__c</fullName>
    <description>External system unique ID of the product related to installed product</description>
    <inlineHelpText>External system unique ID of the product related to installed product</inlineHelpText>
    <label>Product (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>