All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/SM_External_Top_Level__c.field-meta.xml
<CustomField>
    <fullName>SM_External_Top_Level__c</fullName>
    <description>External system unique ID to the top level installed product in the installed product hierarchy.</description>
    <inlineHelpText>External system unique ID to the top level installed product in the installed product hierarchy.</inlineHelpText>
    <label>Top-Level (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>