All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the installed product.</description>
    <inlineHelpText>Current status of the installed product.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
                <default>true</default>
                <label>Installed</label>
            </value>
            <value>
                <fullName>Deinstalled</fullName>
            </value>
            <value>
                <fullName>In-Transit-Return</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Loaned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>