All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>“Street” part of the physical location address</description>
    <inlineHelpText>“Street” part of the physical location address</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>