All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Sub_Location__c.field-meta.xml
<CustomField>
    <fullName>Sub_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Location</label>
    <referenceTo>Sub_Location__c</referenceTo>
    <relationshipName>Installed_Products_del</relationshipName>
    <type>Lookup</type>
</CustomField>