All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <length>40</length>
    <type>Text</type>
</CustomField>