All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <description>This field is used by Reverse Logistics Module. End date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>