All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <description>This field is used by Reverse Logistics Module. Start date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>