All_Component_DX/force-app/main/default/objects/Installed_Product__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>“Zip/Postal Code” part of the physical location address</description>
    <inlineHelpText>“Zip/Postal Code” part of the physical location address</inlineHelpText>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>