All_Component_DX/force-app/main/default/objects/Installed_Product__c/listViews/All_Installed_Products.listView-meta.xml
<ListView>
    <fullName>All_Installed_Products</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Site__c</columns>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Parent__c</columns>
    <columns>Serial_Lot_Number__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Shipped__c</columns>
    <columns>Date_Installed__c</columns>
    <columns>Status__c</columns>
    <columns>Street__c</columns>
    <columns>Country__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Installed Products</label>
    <language>en_US</language>
</ListView>